@@ -1,6 +1,6 @@
 // Specific definitions for HPUX  -*- C++ -*-
 
-// Copyright (C) 2000, 2002, 2004, 2005, 2008, 2009, 2010
+// Copyright (C) 2000, 2002, 2004, 2005, 2008, 2009, 2010, 2011
 // Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
@@ -37,11 +37,6 @@
 // Use macro form of ctype functions to ensure __SB_masks is defined.
 #define _SB_CTYPE_MACROS 1
 
-// This would be defaulted in the main c++config header if we didn't
-// define it here, but it has to be defined before we can use the
-// namespace macros, so we have to define it to nothing here instead.
-#define _GLIBCXX_PSEUDO_VISIBILITY(V)
-
 /* HP-UX, for reasons unknown choose to use a different name for
    the string to [unsigned] long long conversion routines.
 
@@ -63,9 +58,8 @@
    We also force _GLIBCXX_USE_LONG_LONG here so that we don't have
    to bastardize configure to deal with this sillyness.  */
 
-namespace std _GLIBCXX_VISIBILITY(default)
+namespace std
 {
-_GLIBCXX_BEGIN_NAMESPACE_VERSION
 _GLIBCXX_BEGIN_EXTERN_C
 
 #ifndef __LP64__
@@ -81,8 +75,7 @@ _GLIBCXX_BEGIN_EXTERN_C
 #endif
 
 _GLIBCXX_END_EXTERN_C
-_GLIBCXX_END_NAMESPACE_VERSION
-} // namespace
+} // namespace std
 
 #define _GLIBCXX_USE_LONG_LONG 1
 
